@@ -150,7 +150,7 @@ set BASE_JVM_OPTS=-Xms1g -Xmx1g -server -XX:+AggressiveOpts
 if "%JVM_OPTS%" == "" (
     :: Hadoop needs class unloading enabled and large size of perm space.
     if defined GRIDGAIN_HADOOP_CLASSPATH (
-        set JVM_OPTS=%BASE_JVM_OPTS% -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256m
+        set JVM_OPTS=%BASE_JVM_OPTS% -XX:MaxPermSize=350m -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSClassUnloadingEnabled -XX:+ParallelRefProcEnabled -XX:+ExplicitGCInvokesConcurrentAndUnloadsClasses
     ) else (
         set JVM_OPTS=%BASE_JVM_OPTS%
     )
